--- a/gui/app/src/main/res/layout/recipes_card.xml
+++ b/gui/app/src/main/res/layout/recipes_card.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="50dp"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     >
@@ -10,22 +10,26 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="15dp"
-        card_view:cardCornerRadius="15dp">
+        android:padding="15dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/border"
             android:orientation="vertical">
 
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="match_parent"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:text="TextView" />
+                android:fontFamily="sans-serif-condensed"
+                android:gravity="center"
+                android:text="TextView"
+                android:textColor="@color/brownish"
+                android:textSize="20sp" />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
