--- a/gui/app/src/main/res/layout/equipment_popup.xml
+++ b/gui/app/src/main/res/layout/equipment_popup.xml
@@ -12,12 +12,13 @@
 
         <TextView
             android:id="@+id/equipment_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="14dp"
-            android:text="HELLO"
+            android:background="@color/morewhite"
+            android:gravity="center"
+            android:text="@string/default_string"
             android:textSize="20sp" />
 
         <Button
@@ -26,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:text="Dismiss" />
+            android:text="@string/dismiss" />
 
         <RelativeLayout
             android:id="@+id/popup_relative"
